--- a/package.json
+++ b/package.json
@@ -27,11 +27,13 @@
     "express": "^4.17.1",
     "express-fileupload": "^1.2.1",
     "jsonwebtoken": "^8.5.1",
+    "mailgun-js": "^0.22.0",
     "mongoose": "^5.13.4",
     "mongoose-paginate-v2": "^1.4.1",
     "morgan": "^1.10.0",
     "multer": "^1.4.3",
     "multer-s3": "^2.9.0",
+    "nodemailer": "^6.6.3",
     "nodemon": "^2.0.12",
     "socket.io": "^4.1.3"
   }
