--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "express-fileupload": "^1.2.1",
     "jsonwebtoken": "^8.5.1",
     "mailgun-js": "^0.22.0",
+    "mercadopago": "^1.5.8",
     "mongoose": "^5.13.4",
     "mongoose-paginate-v2": "^1.4.1",
     "morgan": "^1.10.0",
