--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
   "dependencies": {
     "aws-sdk": "^2.973.0",
     "bcrypt": "^5.0.1",
+    "chart.js": "^3.7.0",
     "cloudinary": "^1.27.1",
     "cors": "^2.8.5",
     "dotenv": "^10.0.0",
